# beeai-labs

./: .gitignore  CONTRIBUTING.md  README-bee_agent.md  README.md  deploycr.py  pyproject.toml
.github/workflows/: check_schema.yaml  maestro_check-mermaid.yaml  maestro_check-schema.yaml  maestro_check-schemas.yaml  maestro_demo-test.yaml  maestro_demo-tests.yaml  maestro_demotest.yaml  maestro_deploy-tests.yaml  maestro_deploy_tests.yaml  maestro_operator-build.yaml  maestro_operator-test.yaml  maestro_pytest.yaml  maestro_release.yaml  maestro_run-tests.yaml  tests.yaml
bee-agent/: README.md
bee-hive/: README.md  bee-hive.html  bee-hive.sh  bee-hive.yaml  pyproject.toml  run_workflow.py
bee-hive/bee_hive/: __init__.py  agent.py  agent_factory.py  agent_schema.json  crewai_agent.py  run_workflow.py  step.py  test_workflow.py  workflow.py
bee-hive/bee_hive/tests/crewai/: agents.yaml  test_crewai.py
bee-hive/cli/: beeAI.py
bee-hive/tests/: test_workflow.py
bee-hive/tests/bee/: agents.yaml  test_bee.py  workflow.yaml
bee-hive/tests/crewai/: test_crewai.py
bee-hive/tests/workflow/: test_sequence.py
beehive/bee_hive/: step.py  test_sequential.py  workflow.py
ci/: check-schemas.sh
cli/: commands.py
demos/: README.md
docs/: USER_GUIDE.md
maestro/: README.md  pyproject.toml  requirements.txt
maestro-demos/: pyproject.toml
maestro/cli/: commands.py  (+4 more)
operator/: Dockerfile-engine  Makefile  README.md  api.py
schemas/: workflow_schema.json
src/: mermaid.py  step.py  workflow.py
tools/: check-mermaid.sh  setup_maestro.sh  workflow_schema.json
(+257 files in other folders)
